use help messages to show required fields

--- a/libs/user/src/assets/i18n/ca.json
+++ b/libs/user/src/assets/i18n/ca.json
@@ -17,7 +17,7 @@
 	"login.email": "Correu electrònic",
 	"login.email_already_exists": "Ja existeix un usuari registrat amb aquest correu electrònic",
 	"login.email_signup": "Correu electrònic professional",
-	"login.email_signup_help": "Només es permeten les adreces de correu electrònic de l'empresa",
+	"login.email_signup_help": "Camp necessari. Només es permeten les adreces de correu electrònic de l'empresa.",
 	"login.error.auth_error": "Error d'autentificació.",
 	"login.error.get_consent_error": "S'ha produït un error a l'obtenir la informació de consentiment",
 	"login.error.google_workspace": "El registre amb Google està restringit als dominis de l'espai de treball, ho sento.",
@@ -48,7 +48,7 @@
 	"onboarding.consent": "En utilitzar aquest producte, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
 	"onboarding.get_started": "Començar",
 	"onboarding.host_db": "Voleu allotjar la base de dades a la vostra infraestructura?",
-	"onboarding.host_db_help": "Això no afecta la vostra experiència d'usuari",
+	"onboarding.host_db_help": "Camp necessari. Això no afecta la vostra experiència d'usuari.",
 	"onboarding.host_db_no": "No, prefereixo utilitzar el núvol de Nuclia",
 	"onboarding.host_db_yes": "Sí, allotjaré NucliaDB a la meva infraestructura",
 	"onboarding.invalid_phone_code": "Codi invàlid",
