--- a/libs/user/src/assets/i18n/de.json
+++ b/libs/user/src/assets/i18n/de.json
@@ -17,7 +17,7 @@
 	"login.email": "Email",
 	"login.email_already_exists": "Diese Emailadresse existiert bereits!",
 	"login.email_signup": "Professionelle E-Mail",
-	"login.email_signup_help": "Nur Firmen-E-Mail-Adressen zulässig",
+	"login.email_signup_help": "Pflichtfeld. Nur Firmen-E-Mail-Adressen zulässig.",
 	"login.error.auth_error": "Authentifizierungsfehler.",
 	"login.error.get_consent_error": "Beim Abrufen der Einwilligungsinformationen ist ein Fehler aufgetreten",
 	"login.error.google_workspace": "Die Anmeldung bei Google ist leider auf Workspace-Domains beschränkt.",
@@ -48,7 +48,7 @@
 	"onboarding.consent": "Durch die Nutzung dieses Produkts akzeptieren Sie die <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Allgemeinen Geschäftsbedingungen</a> und die <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Datenschutzerklärung</a>.",
 	"onboarding.get_started": "Loslegen",
 	"onboarding.host_db": "Möchten Sie die Datenbank in Ihrer Infrastruktur hosten?",
-	"onboarding.host_db_help": "Dies hat keinen Einfluss auf das Benutzererlebnis",
+	"onboarding.host_db_help": "Pflichtfeld. Dies hat keinen Einfluss auf das Benutzererlebnis.",
 	"onboarding.host_db_no": "Nein, ich nutze lieber die Cloud von Nuclia",
 	"onboarding.host_db_yes": "Ja, ich werde NucliaDB in meiner Infrastruktur hosten",
 	"onboarding.invalid_phone_code": "Ungültiger Code",
