--- a/libs/user/src/assets/i18n/en.json
+++ b/libs/user/src/assets/i18n/en.json
@@ -17,7 +17,7 @@
 	"login.email": "Email",
 	"login.email_already_exists": "This email address already exists! ",
 	"login.email_signup": "Professional email",
-	"login.email_signup_help": "Only company email addresses allowed",
+	"login.email_signup_help": "Required field. Only company email addresses allowed.",
 	"login.error.auth_error": "Authentication error.",
 	"login.error.get_consent_error": "An error occurred while retrieving consent information",
 	"login.error.google_workspace": "Sign up with Google is restricted to workspace domains, sorry.",
@@ -48,7 +48,7 @@
 	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
 	"onboarding.get_started": "Get started",
 	"onboarding.host_db": "Will you want to host the database in your infrastructure?",
-	"onboarding.host_db_help": "This does not affect your users experience",
+	"onboarding.host_db_help": "Required field. This does not affect your users experience.",
 	"onboarding.host_db_no": "No, I prefer to use Nuclia’s cloud",
 	"onboarding.host_db_yes": "Yes, I will host NucliaDB in my infrastructure",
 	"onboarding.invalid_phone_code": "Invalid code",
