--- a/libs/user/src/assets/i18n/es.json
+++ b/libs/user/src/assets/i18n/es.json
@@ -17,7 +17,7 @@
 	"login.email": "Correo electrónico",
 	"login.email_already_exists": "Ya existe un usuario registrado con este correo electrónico",
 	"login.email_signup": "Correo electrónico profesional",
-	"login.email_signup_help": "Solo se permiten direcciones de correo electrónico de la empresa",
+	"login.email_signup_help": "Campo requerido. Sólo se permiten direcciones de correo electrónico de la empresa.",
 	"login.error.auth_error": "Error de autenticación.",
 	"login.error.get_consent_error": "Se ha producido un error al obtener la información de consentimiento",
 	"login.error.google_workspace": "Registrarse con Google está restringido a dominios de espacios de trabajo, lo siento.",
@@ -48,7 +48,7 @@
 	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
 	"onboarding.get_started": "Empezar",
 	"onboarding.host_db": "¿Querrá alojar la base de datos en su infraestructura?",
-	"onboarding.host_db_help": "Esto no afecta la experiencia de sus usuarios.",
+	"onboarding.host_db_help": "Campo requerido. Esto no afecta la experiencia de sus usuarios.",
 	"onboarding.host_db_no": "No, prefiero usar la nube de Nuclia",
 	"onboarding.host_db_yes": "Sí, alojaré NucliaDB en mi infraestructura",
 	"onboarding.invalid_phone_code": "Codigo invalido",
