--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -17,7 +17,7 @@
 	"login.email": "Email",
 	"login.email_already_exists": "Cet email existe déjà!",
 	"login.email_signup": "Email professionnel",
-	"login.email_signup_help": "Seuls les emails d'entreprise sont autorisés",
+	"login.email_signup_help": "Champ requis. Seules les adresses e-mail d'entreprise sont autorisées.",
 	"login.error.auth_error": "Erreur d'authentification.",
 	"login.error.get_consent_error": "Une erreur s'est produite lors de la récupération des informations relatives au consentement",
 	"login.error.google_workspace": "L'inscription avec Google est limitée aux domaines professionnels, désolé.",
@@ -48,7 +48,7 @@
 	"onboarding.consent": "En utilisant ce produit, vous acceptez les <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">termes et conditions</a> et <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">politique de confidentialité</a>.",
 	"onboarding.get_started": "Commencer",
 	"onboarding.host_db": "Souhaitez-vous héberger la base de données dans votre infrastructure ?",
-	"onboarding.host_db_help": "Cela n'affecte pas l'expérience de vos utilisateurs",
+	"onboarding.host_db_help": "Champs requis. Cela n'affecte pas l'expérience de vos utilisateurs.",
 	"onboarding.host_db_no": "Non, je préfère utiliser le cloud de Nuclia",
 	"onboarding.host_db_yes": "Oui, j'hébergerai NucliaDB dans mon infrastructure",
 	"onboarding.invalid_phone_code": "Code invalide",
