--- a/libs/user/src/assets/i18n/pt.json
+++ b/libs/user/src/assets/i18n/pt.json
@@ -17,7 +17,7 @@
 	"login.email": "O email",
 	"login.email_already_exists": "Esse endereço de email já existe!",
 	"login.email_signup": "E-mail profissional",
-	"login.email_signup_help": "Somente endereços de e-mail corporativos são permitidos",
+	"login.email_signup_help": "Campo obrigatório. Somente endereços de e-mail corporativos são permitidos.",
 	"login.error.auth_error": "Erro de autenticação.",
 	"login.error.get_consent_error": "Ocorreu um erro ao recuperar informações de consentimento",
 	"login.error.google_workspace": "A inscrição no Google é restrita a domínios de espaço de trabalho, desculpe.",
@@ -48,7 +48,7 @@
 	"onboarding.consent": "Ao usar este produto, você aceita os <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termos e Condições</a> e a <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de Privacidade</a>.",
 	"onboarding.get_started": "Iniciar",
 	"onboarding.host_db": "Você deseja hospedar o banco de dados em sua infraestrutura?",
-	"onboarding.host_db_help": "Isso não afeta a experiência do usuário",
+	"onboarding.host_db_help": "Campo obrigatório. Isso não afeta a experiência do usuário.",
 	"onboarding.host_db_no": "Não, prefiro usar a nuvem da Nuclia",
 	"onboarding.host_db_yes": "Sim, hospedarei o NucliaDB em minha infraestrutura",
 	"onboarding.invalid_phone_code": "Código inválido",
