[sc-7890] New widget generator page
  - New layout with two tabs on the left panel, widget preview on the right and code snippet as on overlay on the right
  - Categorization of the advanced form
  - update call to Svelte’s `$destroy` method

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -774,70 +774,6 @@
 	"stash.valid_emails": "Afegeix, separats per comes, els correus electrònics dels quals s’acceptarà correu electrònic",
 	"stash.valid_emails_label": "Correus electrònics",
 	"stash.view_edit_service_access": "Visualitza / edita les claus de l'API existents",
-	"stash.widgets.answers.help": "Genera resposta a les preguntes dels usuaris i permet xatejar amb el sistema",
-	"stash.widgets.answers.label": "Generació de respostes",
-	"stash.widgets.autocompleteFromNERs.help": "Suggereix NERs per autocompletar la consulta de cerca",
-	"stash.widgets.autocompleteFromNERs.label": "Autocompletar des de NERs",
-	"stash.widgets.autofilter.help": "Detecta les entitats mencionades a la consulta de l'usuari i les converteix automàticament en filtres",
-	"stash.widgets.autofilter.label": "Filtrat automàtic",
-	"stash.widgets.configuration": "Configuració del widget",
-	"stash.widgets.created": "Filtrar per data de creació",
-	"stash.widgets.created-warning": "El filtratge es basarà en el valor <code>origin.created</code> si es proporciona en el recurs, en cas contrari, s'utilitzarà per defecte la data de creació del recurs (<code>created</code>). <br>Tingueu en compte: tots els recursos creats abans del 02/11/2023 s'hauran de reprocessar per tal que es pugui filtrar per <code>origin.created</code>.",
-	"stash.widgets.darkMode.help": "Activa el tema fosc al giny",
-	"stash.widgets.darkMode.label": "Mode fosc",
-	"stash.widgets.displayMetadata.help": "Mostra algunes metadades als resultats de la cerca",
-	"stash.widgets.displayMetadata.label": "Mostra metadades",
-	"stash.widgets.entities": "Filtar per entitats",
-	"stash.widgets.filter.help": "Mostra els filtres a la barra de cerca",
-	"stash.widgets.filter.label": "Filtre",
-	"stash.widgets.filter_type": "Tipus de filtre",
-	"stash.widgets.hideLogo.help": "Amagar el logotip de Nuclia de la barra de cerca",
-	"stash.widgets.hideLogo.label": "Amagar logotip",
-	"stash.widgets.hideSources.help": "Amaga les fonts utilitzades per generar la resposta",
-	"stash.widgets.hideSources.label": "Amaga les fonts",
-	"stash.widgets.hideThumbnails.help": "Amaga les miniatures als resultats de la cerca",
-	"stash.widgets.hideThumbnails.label": "Amaga les miniatures",
-	"stash.widgets.hint_1": "Per mostrar correctament els resultats, l'amplada de la barra de cerca no hauria de ser inferior a 348px.",
-	"stash.widgets.hint_2": "Si el color de fons de la pàgina de cerca no és neutre, recordeu d'afegir un color de fons al quadre de cerca perquè sigui més fàcil de llegir.",
-	"stash.widgets.knowledgeGraph.help": "Permet mostrar totes les relacions entre entitats per a un recurs determinat",
-	"stash.widgets.knowledgeGraph.label": "Gràfic de relacions",
-	"stash.widgets.labelFamilies": "Filtrar per famílies d'etiquetes",
-	"stash.widgets.labels": "Filtrar per etiquetes",
-	"stash.widgets.navigateToFile.help": "Quan feu servir Nuclia per cercar pàgines web, fer clic a un resultat obrirà l'arxiu original en lloc de mostrar-lo al visor.",
-	"stash.widgets.navigateToFile.label": "Navega cap als arxius",
-	"stash.widgets.navigateToLink.help": "Quan feu servir Nuclia per cercar pàgines web, fer clic a un resultat obrirà la pàgina original en lloc de mostrar-la al visor.",
-	"stash.widgets.navigateToLink.label": "Navega cap als enllaços",
-	"stash.widgets.noBM25forChat.help": "Els resultats de full text no s'utilitzaran per generar respostes",
-	"stash.widgets.noBM25forChat.label": "Només resultats semàntics per a les respostes",
-	"stash.widgets.onlyAnswers.help": "Mostra respostes però no resultats de cerca. Aquesta opció només té efecte si la generació de respostes està activada",
-	"stash.widgets.onlyAnswers.label": "Només respostes",
-	"stash.widgets.permalink.help": "Afegiu paràmetres addicionals a l'URL que permet l'obertura directa d'un recurs o dels resultats d'una cerca",
-	"stash.widgets.permalink.label": "Permalinks",
-	"stash.widgets.placeholder": "Placeholder de la barra de cerca",
-	"stash.widgets.preselected-filters.help": "Aquests filtres s'aplicaran a qualsevol consulta de cerca sense ser visibles per als usuaris finals.",
-	"stash.widgets.preselected-filters.label": "Filtres preseleccionats",
-	"stash.widgets.preselected-filters.placeholder": "Un filtre per línia",
-	"stash.widgets.preview": "Vista prèvia",
-	"stash.widgets.prompt.help": "Tindrà prioritat a el prompt de l'usuari definida a la configuració del Knowledge Box. Nota: l'estratègia del prompt pot canviar en funció del model generatiu. Comproveu els exemples a la pàgina de configuració.",
-	"stash.widgets.prompt.label": "Prompt de l'usuari",
-	"stash.widgets.publish_kb": "Podeu publicar·lo des de",
-	"stash.widgets.publish_kb_link": "Panell",
-	"stash.widgets.recommendations": "Recomanacions",
-	"stash.widgets.relations.help": "Mostra informació de les entitats relacionades en els resultats de cerca",
-	"stash.widgets.relations.label": "Relacions",
-	"stash.widgets.snippet": "Fragment de codi",
-	"stash.widgets.suggestions.help": "Suggereix resultats mentre escriviu la consulta de cerca",
-	"stash.widgets.suggestions.label": "Suggeriments",
-	"stash.widgets.suggestLabels.help": "Quan s'ha realitzat l'entrenament de la intenció de cerca d'etiquetes, es mostren les etiquetes suggerides en funció de la consulta",
-	"stash.widgets.suggestLabels.label": "Suggereix etiquetes",
-	"stash.widgets.synonyms.help": "Relaciona sinònims a la cerca difusa. No es pot utilitzar amb l'opció de relació.",
-	"stash.widgets.synonyms.label": "Coincidir amb sinònims",
-	"stash.widgets.targetNewTab.help": "Obre en una pestanya nova",
-	"stash.widgets.targetNewTab.label": "Orienta una pestanya nova",
-	"stash.widgets.title": "Generador de widgets de cerca",
-	"stash.widgets.warning": "Perquè el giny funcioni correctament, el Knowledge Box <strong>ha de ser públic</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Zona perillosa! Perquè aquest giny funcioni amb un Knowledge Box privat, cal que proporcioneu una clau API.",
-	"stash.widgets.warning-dangerous-snippet-details": "No utilitzeu aquest fragment en un lloc web públic.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Començar",
 	"stats.processing_time": "Temps de processament",
@@ -904,5 +840,73 @@
 	"user.logout": "Sortir",
 	"validation.name_required": "Introdueix el nom i cognoms",
 	"validation.url_required": "Introdueix una URL vàlida (per exemple https://nuclia.com)",
+	"widget.generator.advanced.display-category.dark-mode.help": "Activa el tema fosc al giny",
+	"widget.generator.advanced.display-category.dark-mode.label": "Mode fosc",
+	"widget.generator.advanced.display-category.display-metadata.help": "Mostra algunes metadades als resultats de la cerca",
+	"widget.generator.advanced.display-category.display-metadata.label": "Mostra metadades",
+	"widget.generator.advanced.display-category.hide-logo.help": "Amagar el logotip de Nuclia de la barra de cerca",
+	"widget.generator.advanced.display-category.hide-logo.label": "Amagar logotip",
+	"widget.generator.advanced.display-category.hide-thumbnails.help": "Amaga les miniatures als resultats de la cerca",
+	"widget.generator.advanced.display-category.hide-thumbnails.label": "Amaga les miniatures",
+	"widget.generator.advanced.display-category.placeholder": "Placeholder de la barra de cerca",
+	"widget.generator.advanced.display-category.title": "Mostra",
+	"widget.generator.advanced.generative-answer-category.answers.help": "Genera resposta a les preguntes dels usuaris i permet xatejar amb el sistema",
+	"widget.generator.advanced.generative-answer-category.answers.label": "Generació de respostes",
+	"widget.generator.advanced.generative-answer-category.hide-sources.help": "Amaga les fonts utilitzades per generar la resposta",
+	"widget.generator.advanced.generative-answer-category.hide-sources.label": "Amaga les fonts",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Els resultats de full text no s'utilitzaran per generar respostes",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Només resultats semàntics",
+	"widget.generator.advanced.generative-answer-category.only-answers.help": "Mostra respostes però no resultats de cerca. ",
+	"widget.generator.advanced.generative-answer-category.only-answers.label": "Només respostes",
+	"widget.generator.advanced.generative-answer-category.prompt.help": "Tindrà prioritat a el prompt de l'usuari definida a la configuració del Knowledge Box. Nota: l'estratègia del prompt pot canviar en funció del model generatiu. Comproveu els exemples a la pàgina de configuració.",
+	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt de l'usuari",
+	"widget.generator.advanced.generative-answer-category.title": "Respostes generatives",
+	"widget.generator.advanced.navigation-category.navigate-to-file.help": "Quan feu servir Nuclia per cercar pàgines web, fer clic a un resultat obrirà l'arxiu original en lloc de mostrar-lo al visor.",
+	"widget.generator.advanced.navigation-category.navigate-to-file.label": "Navega cap als arxius",
+	"widget.generator.advanced.navigation-category.navigate-to-link.help": "Quan feu servir Nuclia per cercar pàgines web, fer clic a un resultat obrirà la pàgina original en lloc de mostrar-la al visor.",
+	"widget.generator.advanced.navigation-category.navigate-to-link.label": "Navega cap als enllaços",
+	"widget.generator.advanced.navigation-category.permalink.help": "Afegiu paràmetres addicionals a l'URL que permet l'obertura directa d'un recurs o dels resultats d'una cerca",
+	"widget.generator.advanced.navigation-category.permalink.label": "Permalinks",
+	"widget.generator.advanced.navigation-category.target-new-tab.help": "Obriu enllaços i/o fitxers en una pestanya nova",
+	"widget.generator.advanced.navigation-category.target-new-tab.label": "Orienta una pestanya nova",
+	"widget.generator.advanced.navigation-category.title": "Navegació",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.help": "Suggereix NERs per autocompletar la consulta de cerca",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.label": "Autocompletar des de NERs",
+	"widget.generator.advanced.ner-category.knowledge-graph.help": "Permet mostrar totes les relacions entre entitats per a un recurs determinat",
+	"widget.generator.advanced.ner-category.knowledge-graph.label": "Gràfic de relacions",
+	"widget.generator.advanced.ner-category.relations.help": "Mostra informació sobre NER als resultats de la cerca. No es pot utilitzar amb l'opció \"Concorda amb sinònims\".",
+	"widget.generator.advanced.ner-category.relations.label": "Relacions",
+	"widget.generator.advanced.ner-category.title": "NER",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.help": "Detecta les entitats mencionades a la consulta de l'usuari i les converteix automàticament en filtres",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.label": "Filtrat automàtic",
+	"widget.generator.advanced.search-and-filtering-category.filter.help": "Mostra els filtres a la barra de cerca",
+	"widget.generator.advanced.search-and-filtering-category.filter.label": "Filtre",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.help": "El filtratge es basarà en el valor <code>origin.created</code> si es proporciona en el recurs, en cas contrari, s'utilitzarà per defecte la data de creació del recurs (<code>created</code>). <br>Tingueu en compte: tots els recursos creats abans del 02/11/2023 s'hauran de reprocessar per tal que es pugui filtrar per <code>origin.created</code>.",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.label": "Filtrar per data de creació",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Filtar per entitats",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filtrar per famílies d'etiquetes",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Filtrar per etiquetes",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.help": "Aquests filtres s'aplicaran a qualsevol consulta de cerca sense ser visibles per als usuaris finals.",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Filtres preseleccionats",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Un filtre per línia",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "Quan s'ha realitzat l'entrenament de la intenció de cerca d'etiquetes, es mostren les etiquetes suggerides en funció de la consulta",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Suggereix etiquetes",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Suggereix resultats mentre escriviu la consulta de cerca",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.label": "Suggeriments",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Relaciona sinònims a la cerca difusa. No es pot utilitzar amb l'opció \"Relacions\".",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Coincidir amb sinònims",
+	"widget.generator.advanced.search-and-filtering-category.title": "Cerca i filtratge",
+	"widget.generator.configuration": "Configuració del widget",
+	"widget.generator.page-title": "Configuració del widget",
+	"widget.generator.preview": "Vista prèvia",
+	"widget.generator.private-kb-warning.description": "Si el contingut del Knowledge Box ha de ser públic, podeu publicar-lo des de",
+	"widget.generator.private-kb-warning.link": "Pàgina inicial",
+	"widget.generator.private-kb-warning.snippet": "No exposeu una clau API en un lloc web públic o no segur",
+	"widget.generator.private-kb-warning.title": "El vostre Knowledge Box és privat, no incrusteu aquest widget en una pàgina web pública o no segura.",
+	"widget.generator.publish_kb": "Podeu publicar·lo des de",
+	"widget.generator.publish_kb_link": "Panell",
+	"widget.generator.snippet": "Fragment de codi",
+	"widget.generator.tabs.advanced": "Avançat",
+	"widget.generator.tabs.presets": "Preseleccions",
 	"widget.show-api": "Mostra el punt final de l'API"
 }
