--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -775,70 +775,6 @@
 	"stash.valid_emails": "Ajoutez, séparées par des virgules, les adresses emails des sorcières qui seront acceptées.",
 	"stash.valid_emails_label": "Courriels",
 	"stash.view_edit_service_access": "Afficher/Modifier les clés API existantes",
-	"stash.widgets.answers.help": "Générer une réponse aux questions de l'utilisateur et permettre de discuter avec le système",
-	"stash.widgets.answers.label": "Génération de réponses",
-	"stash.widgets.autocompleteFromNERs.help": "Suggérer des NERs pour compléter automatiquement la requête de recherche",
-	"stash.widgets.autocompleteFromNERs.label": "Saisie semi-automatique à partir des NER",
-	"stash.widgets.autofilter.help": "Détecte les entités mentionnées dans la requête de l'utilisateur et les transforme automatiquement en filtres.",
-	"stash.widgets.autofilter.label": "Filtrage automatique",
-	"stash.widgets.configuration": "Configuration du widget",
-	"stash.widgets.created": "Filtrer par date de création",
-	"stash.widgets.created-warning": "Le filtrage sera basé sur la valeur <code>origin.created</code> si elle est fournie dans la ressource, sinon il sera par défaut sur la date de création de la ressource (<code>created</code>).<br> Attention : toutes les ressources créées avant le 02/11/2023 devront être retraitées pour que <code>origin.created</code> soit filtrable.",
-	"stash.widgets.darkMode.help": "Activer le thème sombre sur le widget",
-	"stash.widgets.darkMode.label": "Mode sombre",
-	"stash.widgets.displayMetadata.help": "Afficher quelques métadonnées sur les résultats de recherche",
-	"stash.widgets.displayMetadata.label": "Afficher les métadonnées",
-	"stash.widgets.entities": "Filtrer par entités",
-	"stash.widgets.filter.help": "Affiche les filtres dans la barre de recherche",
-	"stash.widgets.filter.label": "Filtre",
-	"stash.widgets.filter_type": "Types de filtres",
-	"stash.widgets.hideLogo.help": "Masquer le logo Nuclia de la barre de recherche",
-	"stash.widgets.hideLogo.label": "Masquer logo",
-	"stash.widgets.hideSources.help": "Masquer les sources utilisées pour générer la réponse",
-	"stash.widgets.hideSources.label": "Masquer les sources",
-	"stash.widgets.hideThumbnails.help": "Masquer les vignettes dans les résultats de recherche",
-	"stash.widgets.hideThumbnails.label": "Masquer les vignettes",
-	"stash.widgets.hint_1": "Pour une lecture correcte des résultats, la largeur de la barre de recherche ne doit pas être inférieure à 384px.",
-	"stash.widgets.hint_2": "Si la couleur d’arrière-plan de votre page de recherche n’est pas neutre, n’oubliez pas d’ajouter une couleur d’arrière-plan sur votre champ de recherche pour faciliter la lecture.",
-	"stash.widgets.knowledgeGraph.help": "Permet d'afficher toutes les relations entre entités pour une ressource donnée",
-	"stash.widgets.knowledgeGraph.label": "Graphe de relations",
-	"stash.widgets.labelFamilies": "Filtrer par familles d'étiquettes",
-	"stash.widgets.labels": "Filtrer par libellés",
-	"stash.widgets.navigateToFile.help": "Lorsque vous utilisez Nuclia pour rechercher des pages Web, cliquer sur un résultat ouvrira le fichier original plutôt que de l'afficher dans la visionneuse.",
-	"stash.widgets.navigateToFile.label": "Accédez aux fichiers",
-	"stash.widgets.navigateToLink.help": "Lorsque vous utilisez Nuclia pour rechercher des pages Web, cliquer sur un résultat ouvrira la page d'origine plutôt que de l'afficher dans la visionneuse.",
-	"stash.widgets.navigateToLink.label": "Accédez aux liens",
-	"stash.widgets.noBM25forChat.help": "Les résultats full text ne seront pas utilisés pour générer les réponses",
-	"stash.widgets.noBM25forChat.label": "Uniquement les résultats sémantiques pour les réponses",
-	"stash.widgets.onlyAnswers.help": "Affiche les réponses mais pas les résultats de la recherche. Cette option n'a d'effet que si la génération de réponse est activée",
-	"stash.widgets.onlyAnswers.label": "Seules les réponses",
-	"stash.widgets.permalink.help": "Ajouter des paramètres supplémentaires dans l'URL permettant l'ouverture directe d'une ressource ou des résultats de recherche",
-	"stash.widgets.permalink.label": "Liens permanents",
-	"stash.widgets.placeholder": "Espace réservé dans la barre de recherche",
-	"stash.widgets.preselected-filters.help": "Ces filtres seront appliqués à toutes les requêtes de recherche sans être visibles pour les utilisateurs finaux.",
-	"stash.widgets.preselected-filters.label": "Filtres présélectionnés",
-	"stash.widgets.preselected-filters.placeholder": "Un filtre par ligne",
-	"stash.widgets.preview": "Aperçu",
-	"stash.widgets.prompt.help": "Il aura priorité sur le prompt utilisateur définie dans les paramètres de la Knowledge Box. Remarque : la stratégie de prompt peut changer en fonction du modèle génératif. Vérifiez les exemples dans la page des paramètres.",
-	"stash.widgets.prompt.label": "Prompt utilisateur",
-	"stash.widgets.publish_kb": "Vous pouvez le publier à partir du",
-	"stash.widgets.publish_kb_link": "Tableau de bord",
-	"stash.widgets.recommendations": "Recommandations",
-	"stash.widgets.relations.help": "Affiche des informations sur les entités associées dans les résultats de recherche",
-	"stash.widgets.relations.label": "Rapports",
-	"stash.widgets.snippet": "Extrait de code",
-	"stash.widgets.suggestions.help": "Suggérer des résultats lors de la saisie d'une requête de recherche",
-	"stash.widgets.suggestions.label": "Suggestions",
-	"stash.widgets.suggestLabels.help": "Une fois la formation sur l'intention de recherche d'étiquettes effectuée, affiche les étiquettes suggérées en fonction de la requête.",
-	"stash.widgets.suggestLabels.label": "Proposer des libellés",
-	"stash.widgets.synonyms.help": "Faites correspondre les synonymes dans la recherche floue. Il ne peut pas être utilisé avec l'option relation.",
-	"stash.widgets.synonyms.label": "Faire correspondre les synonymes",
-	"stash.widgets.targetNewTab.help": "Ouvrir dans un nouvel onglet",
-	"stash.widgets.targetNewTab.label": "Cibler un nouvel onglet",
-	"stash.widgets.title": "Générateur de widgets de recherche",
-	"stash.widgets.warning": "Pour que le widget fonctionne correctement, la Knowledge Box <strong>doit être publique</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Zone dangereuse ! Pour que ce widget fonctionne avec une Knowledge Box privée, vous devez fournir une clé API.",
-	"stash.widgets.warning-dangerous-snippet-details": "N'utilisez pas cet extrait sur un site Web public.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Commencer",
 	"stats.processing_time": "Temps de traitement",
@@ -905,5 +841,73 @@
 	"user.logout": "Déconnexion",
 	"validation.name_required": "Ajoutez vos nom et prénom",
 	"validation.url_required": "Saisir une URL valide (par exemple https://nuclia.com)",
+	"widget.generator.advanced.display-category.dark-mode.help": "Activer le thème sombre sur le widget",
+	"widget.generator.advanced.display-category.dark-mode.label": "Mode sombre",
+	"widget.generator.advanced.display-category.display-metadata.help": "Afficher quelques métadonnées sur les résultats de recherche",
+	"widget.generator.advanced.display-category.display-metadata.label": "Afficher les métadonnées",
+	"widget.generator.advanced.display-category.hide-logo.help": "Masquer le logo Nuclia de la barre de recherche",
+	"widget.generator.advanced.display-category.hide-logo.label": "Masquer logo",
+	"widget.generator.advanced.display-category.hide-thumbnails.help": "Masquer les vignettes dans les résultats de recherche",
+	"widget.generator.advanced.display-category.hide-thumbnails.label": "Masquer les vignettes",
+	"widget.generator.advanced.display-category.placeholder": "Espace réservé dans la barre de recherche",
+	"widget.generator.advanced.display-category.title": "Affichage",
+	"widget.generator.advanced.generative-answer-category.answers.help": "Générer une réponse aux questions de l'utilisateur et permettre de discuter avec le système",
+	"widget.generator.advanced.generative-answer-category.answers.label": "Génération de réponses",
+	"widget.generator.advanced.generative-answer-category.hide-sources.help": "Masquer les sources utilisées pour générer la réponse",
+	"widget.generator.advanced.generative-answer-category.hide-sources.label": "Masquer les sources",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Les résultats full text ne seront pas utilisés pour générer les réponses",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Uniquement les résultats sémantiques",
+	"widget.generator.advanced.generative-answer-category.only-answers.help": "Affiche les réponses mais pas les résultats de la recherche. ",
+	"widget.generator.advanced.generative-answer-category.only-answers.label": "Seules les réponses",
+	"widget.generator.advanced.generative-answer-category.prompt.help": "Il aura priorité sur le prompt utilisateur définie dans les paramètres de la Knowledge Box. Remarque : la stratégie de prompt peut changer en fonction du modèle génératif. Vérifiez les exemples dans la page des paramètres.",
+	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt utilisateur",
+	"widget.generator.advanced.generative-answer-category.title": "Réponses génératives",
+	"widget.generator.advanced.navigation-category.navigate-to-file.help": "Lorsque vous utilisez Nuclia pour rechercher des pages Web, cliquer sur un résultat ouvrira le fichier original plutôt que de l'afficher dans la visionneuse.",
+	"widget.generator.advanced.navigation-category.navigate-to-file.label": "Accédez aux fichiers",
+	"widget.generator.advanced.navigation-category.navigate-to-link.help": "Lorsque vous utilisez Nuclia pour rechercher des pages Web, cliquer sur un résultat ouvrira la page d'origine plutôt que de l'afficher dans la visionneuse.",
+	"widget.generator.advanced.navigation-category.navigate-to-link.label": "Accédez aux liens",
+	"widget.generator.advanced.navigation-category.permalink.help": "Ajouter des paramètres supplémentaires dans l'URL permettant l'ouverture directe d'une ressource ou des résultats de recherche",
+	"widget.generator.advanced.navigation-category.permalink.label": "Liens permanents",
+	"widget.generator.advanced.navigation-category.target-new-tab.help": "Ouvrir les liens et/ou les fichiers dans un nouvel onglet",
+	"widget.generator.advanced.navigation-category.target-new-tab.label": "Cibler un nouvel onglet",
+	"widget.generator.advanced.navigation-category.title": "Navigation",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.help": "Suggérer des NERs pour compléter automatiquement la requête de recherche",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.label": "Saisie semi-automatique à partir des NER",
+	"widget.generator.advanced.ner-category.knowledge-graph.help": "Permet d'afficher toutes les relations entre entités pour une ressource donnée",
+	"widget.generator.advanced.ner-category.knowledge-graph.label": "Graphe de relations",
+	"widget.generator.advanced.ner-category.relations.help": "Affiche des informations sur les NER dans les résultats de la recherche. Ne peut pas être utilisé avec l'option \"Faire correspondre les synonymes\".",
+	"widget.generator.advanced.ner-category.relations.label": "Rapports",
+	"widget.generator.advanced.ner-category.title": "NER",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.help": "Détecte les entités mentionnées dans la requête de l'utilisateur et les transforme automatiquement en filtres.",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.label": "Filtrage automatique",
+	"widget.generator.advanced.search-and-filtering-category.filter.help": "Affiche les filtres dans la barre de recherche",
+	"widget.generator.advanced.search-and-filtering-category.filter.label": "Filtre",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.help": "Le filtrage sera basé sur la valeur <code>origin.created</code> si elle est fournie dans la ressource, sinon il sera par défaut sur la date de création de la ressource (<code>created</code>).<br> Attention : toutes les ressources créées avant le 02/11/2023 devront être retraitées pour que <code>origin.created</code> soit filtrable.",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.label": "Filtrer par date de création",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Filtrer par entités",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filtrer par familles d'étiquettes",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Filtrer par libellés",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.help": "Ces filtres seront appliqués à toutes les requêtes de recherche sans être visibles pour les utilisateurs finaux.",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Filtres présélectionnés",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Un filtre par ligne",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "Une fois la formation sur l'intention de recherche d'étiquettes effectuée, affiche les étiquettes suggérées en fonction de la requête.",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Proposer des libellés",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Suggérer des résultats lors de la saisie d'une requête de recherche",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.label": "Suggestions",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Faites correspondre les synonymes dans la recherche floue. Il n'est pas utilisable avec l'option \"Relations\".",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Faire correspondre les synonymes",
+	"widget.generator.advanced.search-and-filtering-category.title": "Recherche et filtrage",
+	"widget.generator.configuration": "Configuration du widget",
+	"widget.generator.page-title": "Configuration du widget",
+	"widget.generator.preview": "Aperçu",
+	"widget.generator.private-kb-warning.description": "Si le contenu de la Knowledge Box est destiné à être public, vous pouvez le publier à partir du",
+	"widget.generator.private-kb-warning.link": "Page d'accueil",
+	"widget.generator.private-kb-warning.snippet": "N'exposez pas une clé API sur un site Web public ou non sécurisé",
+	"widget.generator.private-kb-warning.title": "Votre Knowledge Box est privée, n'intégrez pas ce widget dans une page Web publique ou non sécurisée.",
+	"widget.generator.publish_kb": "Vous pouvez le publier à partir du",
+	"widget.generator.publish_kb_link": "Tableau de bord",
+	"widget.generator.snippet": "Extrait de code",
+	"widget.generator.tabs.advanced": "Avancé",
+	"widget.generator.tabs.presets": "Préconfigurations",
 	"widget.show-api": "Afficher le point de terminaison de l'API"
 }
