--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -774,70 +774,6 @@
 	"stash.valid_emails": "Añada, separado por comas, las direcciones de correos electrónicos de los cuales se aceptará correo electrónico. ",
 	"stash.valid_emails_label": "Correos electrónicos",
 	"stash.view_edit_service_access": "Ver/Editar claves API existentes",
-	"stash.widgets.answers.help": "Generar respuesta a las preguntas de los usuarios y permitir chatear con el sistema",
-	"stash.widgets.answers.label": "Generación de respuesta",
-	"stash.widgets.autocompleteFromNERs.help": "Sugerir NER para autocompletar la consulta de búsqueda",
-	"stash.widgets.autocompleteFromNERs.label": "Autocompletar desde NER",
-	"stash.widgets.autofilter.help": "Detacta las entidades mencionadas en la consulta del usuario y las convierte automáticamente en filtros",
-	"stash.widgets.autofilter.label": "Filtrado automático",
-	"stash.widgets.configuration": "Configuracion de Widget",
-	"stash.widgets.created": "Filtrar por fecha de creación",
-	"stash.widgets.created-warning": "El filtrado se basará en el valor <code>origin.created</code> si se proporciona en el recurso, de lo contrario, se utilizará de forma predeterminada la fecha de creación del recurso (<code>created</code>).<br> Tenga en cuenta: todos los recursos creados antes del 02/11/2023 deberán reprocesarse para que pueda filtrarse por <code>origin.created</code>.",
-	"stash.widgets.darkMode.help": "Habilitar tema oscuro en el widget",
-	"stash.widgets.darkMode.label": "Modo oscuro",
-	"stash.widgets.displayMetadata.help": "Mostrar algunos metadatos en los resultados de búsqueda.",
-	"stash.widgets.displayMetadata.label": "Mostrar metadatos",
-	"stash.widgets.entities": "Filtrar por entidades",
-	"stash.widgets.filter.help": "Muestra filtros en la barra de búsqueda",
-	"stash.widgets.filter.label": "Filtrar",
-	"stash.widgets.filter_type": "Tipos de filtro",
-	"stash.widgets.hideLogo.help": "Ocultar el logotipo de Nuclia de la barra de búsqueda",
-	"stash.widgets.hideLogo.label": "Ocultar logotipo",
-	"stash.widgets.hideSources.help": "Ocultar las fuentes utilizadas para generar la respuesta",
-	"stash.widgets.hideSources.label": "Ocultar fuentes",
-	"stash.widgets.hideThumbnails.help": "Ocultar miniaturas en los resultados de búsqueda",
-	"stash.widgets.hideThumbnails.label": "Ocultar miniaturas",
-	"stash.widgets.hint_1": "Para mostrar correctamente los resultados, el ancho de la barra de búsqueda no debería ser inferior a 384px.",
-	"stash.widgets.hint_2": "Si el color de fondo de su página de búsqueda no es neutral, recuerde agregar un color de fondo en su cuadro de búsqueda para que sea más fácil de leer.",
-	"stash.widgets.knowledgeGraph.help": "Permitir mostrar todas las relaciones entre entidades para un recurso determinado.",
-	"stash.widgets.knowledgeGraph.label": "Gráfico de relaciónes",
-	"stash.widgets.labelFamilies": "Filtrar por familias de etiquetas",
-	"stash.widgets.labels": "Filtrar per etiquetas",
-	"stash.widgets.navigateToFile.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá el archivo original en lugar de mostrarlo en el visor.",
-	"stash.widgets.navigateToFile.label": "Navega hacia los archivos",
-	"stash.widgets.navigateToLink.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá la página original en lugar de mostrarla en el visor.",
-	"stash.widgets.navigateToLink.label": "Navega hacia los enlaces",
-	"stash.widgets.noBM25forChat.help": "Los resultados de full text no se utilizarán para generar respuestas.",
-	"stash.widgets.noBM25forChat.label": "Sólo resultados semánticos para las respuestas.",
-	"stash.widgets.onlyAnswers.help": "Muestra respuestas pero no resultados de búsqueda. Esta opción solo tiene efecto si la generación de respuestas está habilitada",
-	"stash.widgets.onlyAnswers.label": "Solo respuestas",
-	"stash.widgets.permalink.help": "Agregue parámetros adicionales en la URL que permita la apertura directa de un recurso o de los resultados de una búsqueda",
-	"stash.widgets.permalink.label": "Permalinks",
-	"stash.widgets.placeholder": "Placeholder de la barra de búsqueda",
-	"stash.widgets.preselected-filters.help": "Estos filtros se aplicarán a cualquier consulta de búsqueda sin ser visibles para los usuarios finales.",
-	"stash.widgets.preselected-filters.label": "Filtros preseleccionados",
-	"stash.widgets.preselected-filters.placeholder": "Un filtro por línea",
-	"stash.widgets.preview": "Previsualizar",
-	"stash.widgets.prompt.help": "Tendrá prioridad en el prompt de usuario definido en la configuración del Knowledge Box. Nota: la estrategia de prompt puede cambiar según el modelo generativo. Consulte los ejemplos en la página de configuración.",
-	"stash.widgets.prompt.label": "Prompt de usuario",
-	"stash.widgets.publish_kb": "Puedes publicarlo desde el",
-	"stash.widgets.publish_kb_link": "Tablero",
-	"stash.widgets.recommendations": "Recomendaciones",
-	"stash.widgets.relations.help": "Muestra información de las entidades relacionadas en los resultados de búsqueda.",
-	"stash.widgets.relations.label": "Relaciones",
-	"stash.widgets.snippet": "Fragmento de código",
-	"stash.widgets.suggestions.help": "Sugerir resultados mientras escribe la consulta de búsqueda",
-	"stash.widgets.suggestions.label": "Sugerencias",
-	"stash.widgets.suggestLabels.help": "Cuando se ha realizado el entrenamiento de la intención de búsqueda de etiquetas, muestra las etiquetas sugeridas en función de la consulta",
-	"stash.widgets.suggestLabels.label": "Sugerir etiquetas",
-	"stash.widgets.synonyms.help": "Coincidencia de sinónimos en la búsqueda difusa. No se puede utilizar con la opción de relación.",
-	"stash.widgets.synonyms.label": "Coincidencia de sinónimos",
-	"stash.widgets.targetNewTab.help": "Abrir en una pestaña nueva",
-	"stash.widgets.targetNewTab.label": "Apuntar a nueva pestaña",
-	"stash.widgets.title": "Generador de widgets de búsqueda",
-	"stash.widgets.warning": "Para que el widget funcione correctamente, el Knowledge Box <strong>debe ser público</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "¡Zona peligrosa! Para que este widget funcione con un Knowledge Box privado, debe proporcionar una clave API.",
-	"stash.widgets.warning-dangerous-snippet-details": "No utilice este fragmento en un sitio web público.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Empezar",
 	"stats.processing_time": "Tiempo de procesamiento",
@@ -904,5 +840,73 @@
 	"user.logout": "Salir",
 	"validation.name_required": "Añade tu nombre y apellidos",
 	"validation.url_required": "Introduce una URL válida (por ejemplo https://nuclia.com)",
+	"widget.generator.advanced.display-category.dark-mode.help": "Habilitar tema oscuro en el widget",
+	"widget.generator.advanced.display-category.dark-mode.label": "Modo oscuro",
+	"widget.generator.advanced.display-category.display-metadata.help": "Mostrar algunos metadatos en los resultados de búsqueda.",
+	"widget.generator.advanced.display-category.display-metadata.label": "Mostrar metadatos",
+	"widget.generator.advanced.display-category.hide-logo.help": "Ocultar el logotipo de Nuclia de la barra de búsqueda",
+	"widget.generator.advanced.display-category.hide-logo.label": "Ocultar logotipo",
+	"widget.generator.advanced.display-category.hide-thumbnails.help": "Ocultar miniaturas en los resultados de búsqueda",
+	"widget.generator.advanced.display-category.hide-thumbnails.label": "Ocultar miniaturas",
+	"widget.generator.advanced.display-category.placeholder": "Placeholder de la barra de búsqueda",
+	"widget.generator.advanced.display-category.title": "Mostrar",
+	"widget.generator.advanced.generative-answer-category.answers.help": "Generar respuesta a las preguntas de los usuarios y permitir chatear con el sistema",
+	"widget.generator.advanced.generative-answer-category.answers.label": "Generación de respuesta",
+	"widget.generator.advanced.generative-answer-category.hide-sources.help": "Ocultar las fuentes utilizadas para generar la respuesta",
+	"widget.generator.advanced.generative-answer-category.hide-sources.label": "Ocultar fuentes",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Los resultados de full text no se utilizarán para generar respuestas.",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Sólo resultados semánticos",
+	"widget.generator.advanced.generative-answer-category.only-answers.help": "Muestra respuestas pero no resultados de búsqueda.",
+	"widget.generator.advanced.generative-answer-category.only-answers.label": "Solo respuestas",
+	"widget.generator.advanced.generative-answer-category.prompt.help": "Tendrá prioridad en el prompt de usuario definido en la configuración del Knowledge Box. Nota: la estrategia de prompt puede cambiar según el modelo generativo. Consulte los ejemplos en la página de configuración.",
+	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt de usuario",
+	"widget.generator.advanced.generative-answer-category.title": "Respuestas generativas",
+	"widget.generator.advanced.navigation-category.navigate-to-file.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá el archivo original en lugar de mostrarlo en el visor.",
+	"widget.generator.advanced.navigation-category.navigate-to-file.label": "Navega hacia los archivos",
+	"widget.generator.advanced.navigation-category.navigate-to-link.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá la página original en lugar de mostrarla en el visor.",
+	"widget.generator.advanced.navigation-category.navigate-to-link.label": "Navega hacia los enlaces",
+	"widget.generator.advanced.navigation-category.permalink.help": "Agregue parámetros adicionales en la URL que permita la apertura directa de un recurso o de los resultados de una búsqueda",
+	"widget.generator.advanced.navigation-category.permalink.label": "Permalinks",
+	"widget.generator.advanced.navigation-category.target-new-tab.help": "Abrir enlaces y/o archivos en una nueva pestaña",
+	"widget.generator.advanced.navigation-category.target-new-tab.label": "Apuntar a nueva pestaña",
+	"widget.generator.advanced.navigation-category.title": "Navegación",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.help": "Sugerir NER para autocompletar la consulta de búsqueda",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.label": "Autocompletar desde NER",
+	"widget.generator.advanced.ner-category.knowledge-graph.help": "Permitir mostrar todas las relaciones entre entidades para un recurso determinado.",
+	"widget.generator.advanced.ner-category.knowledge-graph.label": "Gráfico de relaciónes",
+	"widget.generator.advanced.ner-category.relations.help": "Muestra información sobre NER en los resultados de búsqueda. No se puede utilizar con la opción \"Coincidir sinónimos\".",
+	"widget.generator.advanced.ner-category.relations.label": "Relaciones",
+	"widget.generator.advanced.ner-category.title": "NER",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.help": "Detacta las entidades mencionadas en la consulta del usuario y las convierte automáticamente en filtros",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.label": "Filtrado automático",
+	"widget.generator.advanced.search-and-filtering-category.filter.help": "Muestra filtros en la barra de búsqueda",
+	"widget.generator.advanced.search-and-filtering-category.filter.label": "Filtrar",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.help": "El filtrado se basará en el valor <code>origin.created</code> si se proporciona en el recurso, de lo contrario, se utilizará de forma predeterminada la fecha de creación del recurso (<code>created</code>).<br> Tenga en cuenta: todos los recursos creados antes del 02/11/2023 deberán reprocesarse para que pueda filtrarse por <code>origin.created</code>.",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.label": "Filtrar por fecha de creación",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Filtrar por entidades",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filtrar por familias de etiquetas",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Filtrar per etiquetas",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.help": "Estos filtros se aplicarán a cualquier consulta de búsqueda sin ser visibles para los usuarios finales.",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Filtros preseleccionados",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Un filtro por línea",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "Cuando se ha realizado el entrenamiento de la intención de búsqueda de etiquetas, muestra las etiquetas sugeridas en función de la consulta",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Sugerir etiquetas",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Sugerir resultados mientras escribe la consulta de búsqueda",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.label": "Sugerencias",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Coincidencia de sinónimos en búsqueda difusa. No se puede utilizar con la opción \"Relaciones\".",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Coincidencia de sinónimos",
+	"widget.generator.advanced.search-and-filtering-category.title": "Búsqueda y filtrado",
+	"widget.generator.configuration": "Configuracion de Widget",
+	"widget.generator.page-title": "Configuracion de Widget",
+	"widget.generator.preview": "Previsualizar",
+	"widget.generator.private-kb-warning.description": "Si el contenido de Knowledge Box está destinado a ser público, puede publicarlo desde la",
+	"widget.generator.private-kb-warning.link": "Página de inicio",
+	"widget.generator.private-kb-warning.snippet": "No exponga una clave API en un sitio web público o inseguro",
+	"widget.generator.private-kb-warning.title": "Su Knowledge Box es privado, no inserte este widget en una página web pública o insegura.",
+	"widget.generator.publish_kb": "Puedes publicarlo desde el",
+	"widget.generator.publish_kb_link": "Tablero",
+	"widget.generator.snippet": "Fragmento de código",
+	"widget.generator.tabs.advanced": "Avanzado",
+	"widget.generator.tabs.presets": "Preselecciones",
 	"widget.show-api": "Mostrar punto final de API"
 }
