--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -775,70 +775,6 @@
 	"stash.valid_emails": "Adicione, separados por vírgulas, os endereços de e-mails dos quais serão aceitos.",
 	"stash.valid_emails_label": "Emails",
 	"stash.view_edit_service_access": "Visualizar/editar chaves de API existentes",
-	"stash.widgets.answers.help": "Gere uma resposta às dúvidas do usuário e permita conversar com o sistema",
-	"stash.widgets.answers.label": "Geração de resposta",
-	"stash.widgets.autocompleteFromNERs.help": "Sugira NERs para preencher automaticamente a consulta de pesquisa",
-	"stash.widgets.autocompleteFromNERs.label": "Preenchimento automático de NERs",
-	"stash.widgets.autofilter.help": "Detecta entidades mencionadas na consulta do usuário e as transforma automaticamente em filtros.",
-	"stash.widgets.autofilter.label": "Filtragem automática",
-	"stash.widgets.configuration": "Configuração de widget",
-	"stash.widgets.created": "Filtrar por data de Criação",
-	"stash.widgets.created-warning": "A filtragem será baseada no valor <code>origin.created</code> se fornecido no recurso, caso contrário, o padrão será a data de criação do recurso (<code>created</code>).<br> Observação: todos os recursos criados antes de 02/11/2023 terão que ser reprocessados para que <code>origin.created</code> sejam filtráveis.",
-	"stash.widgets.darkMode.help": "Habilite o tema escuro no widget",
-	"stash.widgets.darkMode.label": "Modo escuro",
-	"stash.widgets.displayMetadata.help": "Exibir alguns metadados nos resultados da pesquisa",
-	"stash.widgets.displayMetadata.label": "Exibir metadados",
-	"stash.widgets.entities": "Filtrar por entidades",
-	"stash.widgets.filter.help": "Exibe filtros na barra de pesquisa",
-	"stash.widgets.filter.label": "Filtro",
-	"stash.widgets.filter_type": "Tipos de filtro",
-	"stash.widgets.hideLogo.help": "Ocultar o logotipo da Nuclia da barra de pesquisa",
-	"stash.widgets.hideLogo.label": "Esconder logo",
-	"stash.widgets.hideSources.help": "Ocultar fontes usadas para gerar a resposta",
-	"stash.widgets.hideSources.label": "Ocultar fontes",
-	"stash.widgets.hideThumbnails.help": "Ocultar miniaturas nos resultados da pesquisa",
-	"stash.widgets.hideThumbnails.label": "Ocultar miniaturas",
-	"stash.widgets.hint_1": "Para a correta leitura dos resultados, a largura da barra de pesquisa não deve ser inferior a 384px.",
-	"stash.widgets.hint_2": "Se a cor de fundo da sua página de pesquisa não for neutra, lembre-se de adicionar uma cor de fundo à sua caixa de pesquisa para facilitar a leitura.",
-	"stash.widgets.knowledgeGraph.help": "Permite mostrar todas as relações entre entidades para um determinado recurso",
-	"stash.widgets.knowledgeGraph.label": "Gráfico de relações",
-	"stash.widgets.labelFamilies": "Filtrar por famílias de rótulos",
-	"stash.widgets.labels": "Filtrar por rótulos",
-	"stash.widgets.navigateToFile.help": "Ao usar o Nuclia para pesquisar páginas da web, clicar em um resultado abrirá o arquivo original em vez de renderizá-lo no visualizador",
-	"stash.widgets.navigateToFile.label": "Navegue até os arquivos",
-	"stash.widgets.navigateToLink.help": "Ao usar o Nuclia para pesquisar páginas da web, clicar em um resultado abrirá a página original em vez de renderizá-la no visualizador",
-	"stash.widgets.navigateToLink.label": "Navegue até links",
-	"stash.widgets.noBM25forChat.help": "Os resultados de texto completo não serão usados para gerar respostas",
-	"stash.widgets.noBM25forChat.label": "Apenas resultados semânticos para respostas",
-	"stash.widgets.onlyAnswers.help": "Exibe respostas, mas não resultados de pesquisa. Esta opção só tem efeito se a geração de respostas estiver habilitada",
-	"stash.widgets.onlyAnswers.label": "Apenas respostas",
-	"stash.widgets.permalink.help": "Adicione parâmetros extras no URL permitindo a abertura direta de um recurso ou resultados de pesquisa",
-	"stash.widgets.permalink.label": "Links permanentes",
-	"stash.widgets.placeholder": "Espaço reservado da barra de pesquisa",
-	"stash.widgets.preselected-filters.help": "Esses filtros serão aplicados a qualquer consulta de pesquisa sem serem visíveis para os usuários finais.",
-	"stash.widgets.preselected-filters.label": "Filtros pré-selecionados",
-	"stash.widgets.preselected-filters.placeholder": "Um filtro por linha",
-	"stash.widgets.preview": "Visualizar",
-	"stash.widgets.prompt.help": "Terá precedência no prompt do usuário definido nas configurações da Caixa de conhecimento. Nota: a estratégia imediata pode mudar dependendo do modelo generativo. Verifique os exemplos na página de configurações.",
-	"stash.widgets.prompt.label": "Prompt do usuário",
-	"stash.widgets.publish_kb": "Você pode publicá-lo no",
-	"stash.widgets.publish_kb_link": "Painel de controle",
-	"stash.widgets.recommendations": "Recomendações",
-	"stash.widgets.relations.help": "Exibe informações sobre entidades relacionadas nos resultados da pesquisa",
-	"stash.widgets.relations.label": "Relações",
-	"stash.widgets.snippet": "Fragmento de código",
-	"stash.widgets.suggestions.help": "Sugira resultados ao digitar a consulta de pesquisa",
-	"stash.widgets.suggestions.label": "Sugestões",
-	"stash.widgets.suggestLabels.help": "Quando o treinamento de intenção de pesquisa de rótulo for concluído, exibirá rótulos sugeridos com base na consulta",
-	"stash.widgets.suggestLabels.label": "Sugerir rótulos",
-	"stash.widgets.synonyms.help": "Combine sinônimos na pesquisa difusa. Não pode ser usado com a opção de relação.",
-	"stash.widgets.synonyms.label": "Combine sinônimos",
-	"stash.widgets.targetNewTab.help": "Abrir em uma nova guia",
-	"stash.widgets.targetNewTab.label": "Segmentar nova guia",
-	"stash.widgets.title": "Gerador de widget de pesquisa",
-	"stash.widgets.warning": "Para que o widget funcione corretamente, a Knowledge Box <strong>deve ser pública</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Zona perigosa! Para que este widget funcione com uma Knowledge Box privada, você precisa fornecer uma chave de API.",
-	"stash.widgets.warning-dangerous-snippet-details": "Não use este snippet em um site público.",
 	"stats.endpoint": "Endpoint da API NucliaDB",
 	"stats.get_started": "Iniciar",
 	"stats.processing_time": "Tempo de processamento",
@@ -905,5 +841,73 @@
 	"user.logout": "Sair",
 	"validation.name_required": "Adicione seu nome e sobrenomes",
 	"validation.url_required": "Insira um URL válido (por exemplo, https://nuclia.com)",
+	"widget.generator.advanced.display-category.dark-mode.help": "Habilite o tema escuro no widget",
+	"widget.generator.advanced.display-category.dark-mode.label": "Modo escuro",
+	"widget.generator.advanced.display-category.display-metadata.help": "Exibir alguns metadados nos resultados da pesquisa",
+	"widget.generator.advanced.display-category.display-metadata.label": "Exibir metadados",
+	"widget.generator.advanced.display-category.hide-logo.help": "Ocultar o logotipo da Nuclia da barra de pesquisa",
+	"widget.generator.advanced.display-category.hide-logo.label": "Esconder logo",
+	"widget.generator.advanced.display-category.hide-thumbnails.help": "Ocultar miniaturas nos resultados da pesquisa",
+	"widget.generator.advanced.display-category.hide-thumbnails.label": "Ocultar miniaturas",
+	"widget.generator.advanced.display-category.placeholder": "Espaço reservado da barra de pesquisa",
+	"widget.generator.advanced.display-category.title": "Mostrar",
+	"widget.generator.advanced.generative-answer-category.answers.help": "Gere uma resposta às dúvidas do usuário e permita conversar com o sistema",
+	"widget.generator.advanced.generative-answer-category.answers.label": "Geração de resposta",
+	"widget.generator.advanced.generative-answer-category.hide-sources.help": "Ocultar fontes usadas para gerar a resposta",
+	"widget.generator.advanced.generative-answer-category.hide-sources.label": "Ocultar fontes",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Os resultados de texto completo não serão usados para gerar respostas",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Apenas resultados semânticos",
+	"widget.generator.advanced.generative-answer-category.only-answers.help": "Exibe respostas, mas não resultados de pesquisa. ",
+	"widget.generator.advanced.generative-answer-category.only-answers.label": "Apenas respostas",
+	"widget.generator.advanced.generative-answer-category.prompt.help": "Terá precedência no prompt do usuário definido nas configurações da Caixa de conhecimento. Nota: a estratégia imediata pode mudar dependendo do modelo generativo. Verifique os exemplos na página de configurações.",
+	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt do usuário",
+	"widget.generator.advanced.generative-answer-category.title": "Respostas generativas",
+	"widget.generator.advanced.navigation-category.navigate-to-file.help": "Ao usar o Nuclia para pesquisar páginas da web, clicar em um resultado abrirá o arquivo original em vez de renderizá-lo no visualizador",
+	"widget.generator.advanced.navigation-category.navigate-to-file.label": "Navegue até os arquivos",
+	"widget.generator.advanced.navigation-category.navigate-to-link.help": "Ao usar o Nuclia para pesquisar páginas da web, clicar em um resultado abrirá a página original em vez de renderizá-la no visualizador",
+	"widget.generator.advanced.navigation-category.navigate-to-link.label": "Navegue até links",
+	"widget.generator.advanced.navigation-category.permalink.help": "Adicione parâmetros extras no URL permitindo a abertura direta de um recurso ou resultados de pesquisa",
+	"widget.generator.advanced.navigation-category.permalink.label": "Links permanentes",
+	"widget.generator.advanced.navigation-category.target-new-tab.help": "Abra links e/ou arquivos em uma nova guia",
+	"widget.generator.advanced.navigation-category.target-new-tab.label": "Segmentar nova guia",
+	"widget.generator.advanced.navigation-category.title": "Navegação",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.help": "Sugira NERs para preencher automaticamente a consulta de pesquisa",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.label": "Preenchimento automático de NERs",
+	"widget.generator.advanced.ner-category.knowledge-graph.help": "Permite mostrar todas as relações entre entidades para um determinado recurso",
+	"widget.generator.advanced.ner-category.knowledge-graph.label": "Gráfico de relações",
+	"widget.generator.advanced.ner-category.relations.help": "Exibe informações sobre NERs nos resultados da pesquisa. Não pode ser usado com a opção \"Corresponder sinônimos\".",
+	"widget.generator.advanced.ner-category.relations.label": "Relações",
+	"widget.generator.advanced.ner-category.title": "NER",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.help": "Detecta entidades mencionadas na consulta do usuário e as transforma automaticamente em filtros.",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.label": "Filtragem automática",
+	"widget.generator.advanced.search-and-filtering-category.filter.help": "Exibe filtros na barra de pesquisa",
+	"widget.generator.advanced.search-and-filtering-category.filter.label": "Filtro",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.help": "A filtragem será baseada no valor <code>origin.created</code> se fornecido no recurso, caso contrário, o padrão será a data de criação do recurso (<code>created</code>).<br> Observação: todos os recursos criados antes de 02/11/2023 terão que ser reprocessados para que <code>origin.created</code> sejam filtráveis.",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.label": "Filtrar por data de Criação",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Filtrar por entidades",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filtrar por famílias de rótulos",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Filtrar por rótulos",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.help": "Esses filtros serão aplicados a qualquer consulta de pesquisa sem serem visíveis para os usuários finais.",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Filtros pré-selecionados",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Um filtro por linha",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "Quando o treinamento de intenção de pesquisa de rótulo for concluído, exibirá rótulos sugeridos com base na consulta",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Sugerir rótulos",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Sugira resultados ao digitar a consulta de pesquisa",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.label": "Sugestões",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Combine sinônimos na pesquisa difusa. Não pode ser utilizado com a opção \"Relações\".",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Combine sinônimos",
+	"widget.generator.advanced.search-and-filtering-category.title": "Pesquisa e filtragem",
+	"widget.generator.configuration": "Configuração de widget",
+	"widget.generator.page-title": "Configuração de widget",
+	"widget.generator.preview": "Visualizar",
+	"widget.generator.private-kb-warning.description": "Se o conteúdo da Caixa de conhecimento for público, você poderá publicá-lo no",
+	"widget.generator.private-kb-warning.link": "Página Inicial",
+	"widget.generator.private-kb-warning.snippet": "Não exponha uma chave de API em um site público ou inseguro",
+	"widget.generator.private-kb-warning.title": "Sua Caixa de Conhecimento é privada, não incorpore este widget em uma página da web pública ou insegura.",
+	"widget.generator.publish_kb": "Você pode publicá-lo no",
+	"widget.generator.publish_kb_link": "Painel de controle",
+	"widget.generator.snippet": "Fragmento de código",
+	"widget.generator.tabs.advanced": "Avançado",
+	"widget.generator.tabs.presets": "Pré-seleções",
 	"widget.show-api": "Mostrar ponto de extremidade da API"
 }
